Added playlist to song menu

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -527,7 +527,7 @@ Type = Transparent
 X = 690
 Y = 30
 Color = White
-Size = 20
+Size = 16
 Text = MENU
 Font = 1
 Align = 1
@@ -549,14 +549,12 @@ X = 30
 Y = 6
 Z = 0.97
 Color = White
-Size = 15
-Text = SONG_MENU_PLAY
+Size = 14
 
 # shows up instead of Button 1
 # in some song menus
 [SongMenuSelectSlide1]
 TexSBG = Rectangle
-Text =
 Type = Transparent
 TypeSBG = Colorized
 ShowArrows = 1
@@ -579,24 +577,11 @@ STColor = White
 STDColor = White
 
 [SongMenuButton2]
-X = 580
+Inheritance = SongMenuButton1
 Y = 100
-Z = 0.97
-W = 220
-H = 30
-Tex = Rectangle
-Color = ColorLight
-DColor = ColorDark
-Type = Colorized
-Texts = 1
 
 [SongMenuButton2Text1]
-X = 30
-Y = 6
-Color = White
-Size = 15
-Text = SONG_MENU_EDIT
-Z = 0.97
+Inheritance = SongMenuButton1Text1
 
 # shows up instead of Button 2
 # in some song menus
@@ -605,26 +590,11 @@ Inheritance = SongMenuSelectSlide1
 Y = 100
 
 [SongMenuButton3]
-X = 580
+Inheritance = SongMenuButton1
 Y = 130
-Z = 0.97
-W = 220
-H = 30
-Tex = Rectangle
-Color = ColorLight
-DColor = ColorDark
-Type = Colorized
-Texts = 1
 
 [SongMenuButton3Text1]
-X = 30
-Y = 6
-Color = White
-Font = 0
-Size = 15
-Text = SONG_MENU_MODI
-Align = 0
-Z = 0.97
+Inheritance = SongMenuButton1Text1
 
 # shows up instead of BUtton 3
 # in some song menus
@@ -633,51 +603,28 @@ Inheritance = SongMenuSelectSlide1
 Y = 130
 
 [SongMenuButton4]
-X = 580
+Inheritance = SongMenuButton1
 Y = 160
-Z = 0.97
-W = 220
-H = 30
-Tex = Rectangle
-Color = ColorLight
-DColor = ColorDark
-Type = Colorized
-Texts = 1
 
 [SongMenuButton4Text1]
-X = 30
-Y = 6
-Color = White
-Font = 0
-Size = 15
-Text = C_SEARCH_NEW_SONGS
-Align = 0
-Z = 0.97
+Inheritance = SongMenuButton1Text1
 
 [SongMenuButton5]
-X = 580
+Inheritance = SongMenuButton1
 Y = 190
-Z = 0.97
-W = 220
-H = 30
-Tex = Rectangle
-Color = ColorLight
-DColor = ColorDark
-Type = Colorized
-Texts = 1
 
 [SongMenuButton5Text1]
-X = 30
-Y = 6
-Color = White
-Font = 0
-Size = 15
-Text = C_BACK
-Align = 0
-Z = 0.97
+Inheritance = SongMenuButton1Text1
+
+[SongMenuButton6]
+Inheritance = SongMenuButton1
+Y = 220
+
+[SongMenuButton6Text1]
+Inheritance = SongMenuButton1Text1
+
 
 # ----  LEGEND SONG MENU ----
-
 
 #text title legend
 [SongMenuText1]
@@ -686,7 +633,7 @@ Y = 455
 Z = 0.952
 Color = White
 Font = 1
-Size = 20
+Size = 16
 Align = 1
 Text = SONG_MENU_LEGEND_TITLE
 
