Improve translation quality (part2)

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -11833,7 +11833,7 @@ Tex = Optionsbuttongame
 Inheritance = OptionsButtonGameText
 X = 35
 Y = 80
-Text = SING_OPTIONS_GAME
+Text = C_GAME
 
 [OptionsButtonGraphics]
 Inheritance = OptionsButton
@@ -11845,7 +11845,7 @@ Tex = Optionsbuttongraphics
 Inheritance = OptionsButtonGameText
 X = 40
 Y = 80
-Text = SING_OPTIONS_GRAPHICS
+Text = C_GRAPHICS
 
 [OptionsButtonSound]
 Inheritance = OptionsButton
@@ -11860,7 +11860,7 @@ SelectH = 60
 Inheritance = OptionsButtonGameText
 X = 30
 Y = 80
-Text = SING_OPTIONS_SOUND
+Text = C_SOUND
 
 [OptionsButtonLyrics]
 Inheritance = OptionsButton
@@ -11875,7 +11875,7 @@ SelectH = 65
 Inheritance = OptionsButtonGameText
 X = 35
 Y = 80
-Text = SING_OPTIONS_LYRICS
+Text = C_LYRICS
 
 [OptionsButtonThemes]
 Inheritance = OptionsButton
@@ -11890,7 +11890,7 @@ SelectH = 75
 Inheritance = OptionsButtonGameText
 X = 35
 Y = 80
-Text = SING_OPTIONS_THEMES
+Text = C_THEMES
 
 [OptionsButtonMicrophones]
 Inheritance = OptionsButton
@@ -11905,7 +11905,7 @@ SelectH = 65
 Inheritance = OptionsButtonGameText
 X = 40
 Y = 80
-Text = SING_OPTIONS_MICROPHONES
+Text = C_MICROPHONES
 
 [OptionsButtonAdvanced]
 Inheritance = OptionsButton
@@ -11920,7 +11920,7 @@ SelectH = 67
 Inheritance = OptionsButtonGameText
 X = 32
 Y = 80
-Text = SING_OPTIONS_ADVANCED
+Text = C_ADVANCED
 
 [OptionsButtonNetwork]
 Inheritance = OptionsButton
@@ -11935,7 +11935,7 @@ SelectH = 67
 Inheritance = OptionsButtonGameText
 X = 31
 Y = 80
-Text = SING_OPTIONS_NETWORK
+Text = C_INTERNET
 
 [OptionsButtonWebcam]
 Inheritance = OptionsButton
@@ -11947,7 +11947,7 @@ Tex = Optionsbuttonwebcam
 Inheritance = OptionsButtonGameText
 X = 35
 Y = 80
-Text = SING_OPTIONS_WEBCAM
+Text = C_WEBCAM
 
 [OptionsButtonProfiles]
 Inheritance = OptionsButton
@@ -11959,7 +11959,7 @@ Tex = Optionsbuttonprofiles
 Inheritance = OptionsButtonGameText
 X = 35
 Y = 80
-Text = SING_OPTIONS_PROFILES
+Text = C_PROFILES
 
 [OptionsButtonExit]
 Inheritance = OptionsButton
@@ -11973,7 +11973,7 @@ Tex = Optionsbuttonback
 Inheritance = OptionsButtonGameText
 X = 30
 Y = 50
-Text = SING_OPTIONS_EXIT
+Text = C_BACK
 
 [OptionsButtonExit2]
 X = 70
