Improve translation quality (part3)

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -8,7 +8,7 @@
 ###################################
 
 [Theme]
-Version = 19.12
+Version = 20.12
 Creator = Daniel20
 DefaultSkin = Basic Violet
 
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 20.10
+Text = UltraStar WorldParty 20.11
 
 [MainText2]
 X = 5
@@ -481,7 +481,7 @@ Color = White
 Size = 30
 Font = 0
 Align = 1
-Text = STAT_NEXT
+Text = C_NEXT
 
 #########################################
 #####  S O N G   S E L E C T I O N  #####
@@ -635,7 +635,7 @@ Color = White
 Font = 1
 Size = 16
 Align = 1
-Text = SONG_MENU_LEGEND_TITLE
+Text = C_LEGEND
 
 #icon video legend
 [SongMenuStatic2]
@@ -653,7 +653,7 @@ Color = White
 Font = 0
 Size = 12
 Align = 0
-Text = SONG_MENU_LEGEND_VIDEO
+Text = C_VIDEO
 
 #icon medley legend
 [SongMenuStatic3]
@@ -671,7 +671,7 @@ Color = White
 Font = 0
 Size = 12
 Align = 0
-Text = SONG_MENU_LEGEND_MEDLEY
+Text = C_MEDLEY
 
 #icon medley calculated legend
 [SongMenuStatic4]
@@ -697,7 +697,7 @@ Color = White
 Font = 0
 Size = 12
 Align = 0
-Text = SONG_MENU_LEGEND_DUET
+Text = C_DUET
 
 #icon rap legend
 [SongMenuStatic6]
@@ -715,7 +715,7 @@ Color = White
 Font = 0
 Size = 12
 Align = 0
-Text = SONG_MENU_LEGEND_RAP
+Text = C_RAP
 
 #icon Unvalidated legend
 [SongMenuStatic9]
@@ -733,7 +733,7 @@ Color = White
 Font = 0
 Size = 12
 Align = 0
-Text = SONG_MENU_LEGEND_UNVALIDATED
+Text = C_UNVALIDATED
 
 #icon createdby legend
 [SongMenuStatic7]
@@ -751,7 +751,7 @@ Color = White
 Font = 0
 Size = 12
 Align = 0
-Text = SONG_MENU_LEGEND_CREATEDBY
+Text = C_CREATEDBY
 
 #icon fixedby legend
 [SongMenuStatic8]
@@ -769,7 +769,7 @@ Color = White
 Font = 0
 Size = 12
 Align = 0
-Text = SONG_MENU_LEGEND_FIXEDBY
+Text = C_FIXEDBY
 
 
 [SongJumpto]
@@ -11548,7 +11548,7 @@ Y = 10
 Font = 0
 Size = 30
 Align = 1
-Text = SING_OPTIONS_EXIT
+Text = C_BACK
 Color = White
 
 [StatMainTextOverview]
@@ -11604,7 +11604,7 @@ Y = 10
 Font = 0
 Size = 30
 Align = 1
-Text = STAT_NEXT
+Text = C_NEXT
 Color = White
 
 [StatDetailButtonPrev]
@@ -11667,7 +11667,7 @@ Y = 10
 Font = 0
 Size = 30
 Align = 1
-Text = SING_OPTIONS_EXIT
+Text = C_BACK
 Color = White
 
 [StatDetailTextDescription]
@@ -11963,17 +11963,18 @@ Text = C_PROFILES
 
 [OptionsButtonExit]
 Inheritance = OptionsButton
-X = 30
-Y = 520
-W = 50
-H = 60
+X = 420
+Y = 425
+W = 70
+H = 80
 Tex = Optionsbuttonback
 
 [OptionsButtonExitText1]
 Inheritance = OptionsButtonGameText
-X = 30
-Y = 50
+X = 40
+Y = 80
 Text = C_BACK
+
 
 [OptionsButtonExit2]
 X = 70
@@ -11992,7 +11993,7 @@ Y = 5
 Font = 0
 Size = 30
 Align = 1
-Text = SING_OPTIONS_EXIT
+Text = C_BACK
 Color = White
 
 [OptionsSelectSlide]
@@ -12035,7 +12036,7 @@ X = 125
 Y = 35
 Color = White
 Size = 45
-Text = SING_OPTIONS_GAME
+Text = C_GAME
 
 #[OptionsGameText2]
 #X = 50
@@ -12085,7 +12086,7 @@ Y = 355
 
 [OptionsGameSelectFindUnsetMedley]
 Inheritance = OptionsGameSelectSlideLanguage
-Text = SONG_MENU_LEGEND_MEDLEYC
+Text = C_MEDLEYC
 Y = 400
 
 [OptionsGameSelectJoypad]
@@ -12120,7 +12121,7 @@ X = 120
 Y = 35
 Color = White
 Size = 45
-Text = SING_OPTIONS_GRAPHICS
+Text = C_GRAPHICS
 
 #[OptionsGraphicsText2]
 #X = 65
@@ -12193,7 +12194,7 @@ X = 110
 Y = 35
 Color = White
 Size = 45
-Text = SING_OPTIONS_SOUND
+Text = C_SOUND
 
 [OptionsSoundSelectVoicePassthrough]
 Inheritance = OptionsSelectSlide
@@ -12257,7 +12258,7 @@ X = 100
 Y = 35
 Color = White
 Size = 45
-Text = SING_OPTIONS_LYRICS
+Text = C_LYRICS
 
 [OptionsLyricsText5]
 X = 440
@@ -12406,7 +12407,7 @@ X = 120
 Y = 40
 Color = White
 Size = 45
-Text = SING_OPTIONS_THEMES
+Text = C_THEMES
 
 [OptionsThemesText5]
 X = 440
@@ -12460,7 +12461,7 @@ X = 110
 Y = 40
 Color = White
 Size = 45
-Text = SING_OPTIONS_MICROPHONES
+Text = C_MICROPHONES
 
 [OptionsMicrophonesSelectSlideCard]
 Inheritance = OptionsSelectSlide
@@ -12516,7 +12517,7 @@ X = 100
 Y = 40
 Color = White
 Size = 45
-Text = SING_OPTIONS_ADVANCED
+Text = C_ADVANCED
 
 [OptionsAdvancedSelectDebug]
 Inheritance = OptionsSelectSlide
@@ -12580,7 +12581,7 @@ X = 100
 Y = 40
 Color = White
 Size = 45
-Text = SING_OPTIONS_NETWORK
+Text = C_NETWORK
 
 [OptionsNetworkStatic5]
 X = 400
@@ -12732,7 +12733,7 @@ X = 115
 Y = 40
 Color = White
 Size = 45
-Text = SING_OPTIONS_WEBCAM
+Text = C_WEBCAM
 
 [OptionsWebcamText2]
 X = 90
@@ -12832,7 +12833,7 @@ X = 115
 Y = 40
 Color = White
 Size = 45
-Text = SING_OPTIONS_PROFILES
+Text = C_PROFILES
 
 [OptionsProfilesButtonExit]
 Inheritance = OptionsButtonExit2
@@ -13022,7 +13023,7 @@ Y = 10
 Font = 0
 Size = 30
 Align = 1
-Text = SING_OPTIONS_EXIT
+Text = C_BACK
 Color = White
 
 [AboutMainButtonDevelopers]
@@ -13101,7 +13102,7 @@ Y = 10
 Font = 0
 Size = 30
 Align = 1
-Text = SING_OPTIONS_EXIT
+Text = C_BACK
 Color = White
 
 [DevelopersTextOverview]
