Recovered BASS for Windows

--- a/src/lib/requirements.txt
+++ b/src/lib/requirements.txt
@@ -8,6 +8,12 @@ Jedi-sdl
 pngImage
   http://pngdelphi.sourceforge.net/
 
+BASS.pas
+  http://www.un4seen.com/download.php?bass24
+
+BASS_FX.pas
+  http://www.un4seen.com/download.php?z/0/bass_fx24
+  
 ffmpeg
   http://www.iversenit.dk/dev/ffmpeg-headers/
 
