Added exit buton on player selector screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -220,7 +220,7 @@ Tex  = MainBG
 #write your name
 [NameStatic1]
 X = 50
-Y = 425
+Y = 410
 W = 200
 H = 35
 Tex = MainBar
@@ -239,7 +239,7 @@ Type = Transparent
 
 [NameText1]
 X = 30
-Y = 20
+Y = 5
 Color = White
 Font = 0
 Size = 45
@@ -248,7 +248,7 @@ Text = SING_PLAYER_TITLE
 
 [NameText2]
 X = 400
-Y = 75
+Y = 60
 Color = White
 Font = 0
 Size = 32
@@ -257,12 +257,12 @@ Align = 1
 
 [NameText3]
 Inheritance = NameText2
-Y = 370
+Y = 355
 Text = SING_PLAYER_EDIT
 
 [NameText4]
 X = 70
-Y = 430
+Y = 415
 Color = White
 Font = 0
 Size = 22
@@ -282,7 +282,7 @@ Text = SING_PLAYER_NAME
 Inheritance = OptionsSelectSlide
 Text = SING_PLAYER_COUNT
 X = 255
-Y = 150
+Y = 135
 W = 205
 H = 35
 Size = 5
@@ -293,7 +293,7 @@ SBGColor = ColorLight
 
 [NamePlayerSelectStatic1]
 X = 120
-Y = 220
+Y = 205
 W = 66
 H = 88
 Tex = AvatarFrame2
@@ -328,7 +328,7 @@ Color = P6Dark
 
 [NamePlayerSelectStatic1Text]
 X = 152
-Y = 311
+Y = 294
 Font = 1
 Size = 16
 Align = 1
@@ -357,7 +357,7 @@ X = 652
 
 [NamePlayerSelectStatic1Avatar]
 X = 127
-Y = 228
+Y = 213
 W = 51
 H = 72
 Z = 1
@@ -401,7 +401,7 @@ Type = Transparent
 
 [NamePlayerAvatar]
 X = 570
-Y = 435
+Y = 420
 W = 67
 H = 90
 Type = Transparent
@@ -410,7 +410,7 @@ ReflectionSpacing = 10
 
 [NamePlayerButtonAvatar]
 X = 551
-Y = 417
+Y = 402
 W = 107
 H = 124
 Tex = AvatarFrame
@@ -424,7 +424,7 @@ Distance = 40
 
 [NamePlayerButtonName]
 X = 260
-Y = 425
+Y = 410
 W = 150
 H = 35
 Z = 1
@@ -446,7 +446,7 @@ Color = White
 Inheritance = OptionsSelectSlide
 Text= SING_PLAYER_COLOR
 X = 50
-Y = 470
+Y = 455
 W = 200
 H = 35
 Size = 5
@@ -459,11 +459,11 @@ SBGColor = PlayerLight
 [NameSelectPlayerLevel]
 Inheritance = NameSelectPlayerColor
 Text = SING_PLAYER_LEVEL
-Y = 515
+Y = 500
 
 [NamePlayerSingButton]
 X = 253
-Y = 75
+Y = 60
 W = 290
 H = 60
 Tex = Button
@@ -482,6 +482,18 @@ Size = 30
 Font = 0
 Align = 1
 Text = C_NEXT
+
+[NamePlayerExitButton]
+Inheritance = OptionsButtonExit2
+X = 50
+Y = 545
+W = 200
+H = 35
+
+[NamePlayerExitButtonText1]
+Inheritance = OptionsButtonExit2Text
+Size = 22
+X = 40
 
 #########################################
 #####  S O N G   S E L E C T I O N  #####
