Unified 6 players mode with 4 and 3

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -4302,7 +4302,7 @@ Y = 279
 [SingP1ThreePStatic]
 Inheritance = SingP1TwoPStatic
 X = 16
-Y = 57
+Y = 43
 #Z = 1
 
 ; [SingP1ThreePText]
@@ -4314,22 +4314,22 @@ Y = 57
 [SingP1ThreePStatic2]
 Inheritance = SingP1TwoPStatic2
 X = 75
-Y = 61
+Y = 45
 
 [SingP1ThreePTextScore]
 Inheritance = SingP1TwoPTextScore
 X = 93
-Y = 63
+Y = 49
 
 [SingP1ThreePSingBar]
 Inheritance = SingP1TwoPSingBar
 X = 75
-Y = 95
+Y = 80
 
 [SingP1ThreePAvatar]
 Inheritance = SingP1TwoPAvatar
 X = 21
-Y = 63
+Y = 48
 
 #Player Two
 [SingP2MStatic]
@@ -4409,7 +4409,7 @@ Align = 1
 [SingP1FourPStatic]
 Inheritance = SingP1ThreePStatic
 X = 20
-Y = 54
+Y = 40
 W = 40
 H = 54
 
@@ -4434,7 +4434,7 @@ X = 80
 [SingP1FourPAvatar]
 Inheritance = SingP1ThreePAvatar
 X = 24
-Y = 59
+Y = 45
 W = 32
 H = 43
 
@@ -4522,11 +4522,7 @@ X = 624
 # SIX  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 #Player One
 [SingP1SixPStatic]
-Inheritance = SingP1ThreePStatic
-X = 19
-Y = 98
-W = 34
-H = 46
+Inheritance = SingP1FourPStatic
 
 ; [SingP1SixPText]
 ; Inheritance = SingP1Text
@@ -4535,31 +4531,26 @@ H = 46
 ; Size = 18
 
 [SingP1SixPAvatar]
-Inheritance = SingP1ThreePAvatar
-X = 23
-Y = 103
-W = 26
-H = 36
+Inheritance = SingP1FourPAvatar
 
 [SingP1SixPStatic2]
-Inheritance = SingP1ThreePStatic2
-X = 20
-Y = 40
+Inheritance = SingP1FourPStatic2
+X = 60
+W = 80
 
 [SingP1SixPTextScore]
-Inheritance = SingP1ThreePTextScore
-X = 38
-Y = 42
+Inheritance = SingP1FourPTextScore
+X = 70
 
 [SingP1SixPSingBar]
-Inheritance = SingP1ThreePSingBar
-X = 20
-Y = 76
+Inheritance = SingP1FourPSingBar
+X = 60
+W = 80
 
 #Player Two
 [SingP2SixPStatic]
 Inheritance = SingP1SixPStatic
-Y = 225
+X = 150
 Color = P2Dark
 
 ; [SingP2SixPText]
@@ -4567,26 +4558,26 @@ Color = P2Dark
 ; Y = 227
 
 [SingP2SixPAvatar]
-Inheritance = SingP1ThreePAvatar
-Y = 230
+Inheritance = SingP1SixPAvatar
+X = 154
 
 [SingP2SixPStatic2]
 Inheritance = SingP1SixPStatic2
-X = 150
+X = 190
 Color = P2Dark
 
 [SingP2SixPTextScore]
 Inheritance = SingP1SixPTextScore
-X = 168
+X = 200
 
 [SingP2SixPSingBar]
 Inheritance = SingP1SixPSingBar
-X = 150
+X = 190
 
 #Player Three
 [SingP3SixPStatic]
 Inheritance = SingP1SixPStatic
-Y = 350
+X = 280
 Color = P3Dark
 
 ; [SingP3SixPText]
@@ -4594,27 +4585,26 @@ Color = P3Dark
 ; Y = 352
 
 [SingP3SixPAvatar]
-Inheritance = SingP1ThreePAvatar
-Y = 355
+Inheritance = SingP1SixPAvatar
+X = 284
 
 [SingP3SixPStatic2]
 Inheritance = SingP1SixPStatic2
-X = 280
+X = 320
 Color = P3Dark
 
 [SingP3SixPTextScore]
 Inheritance = SingP1SixPTextScore
-X = 298
+X = 330
 
 [SingP3SixPSingBar]
 Inheritance = SingP1SixPSingBar
-X = 280
+X = 320
 
 #Player Four
 [SingP4SixPStatic]
 Inheritance = SingP1SixPStatic
-X = 389
-Y = 98
+X = 410
 Color = P4Dark
 
 ; [SingP4SixPText]
@@ -4623,27 +4613,26 @@ Color = P4Dark
 ; Y = 100
 
 [SingP4SixPAvatar]
-Inheritance = SingP1ThreePAvatar
-X = 393
-Y = 103
+Inheritance = SingP1SixPAvatar
+X = 414
 
 [SingP4SixPStatic2]
 Inheritance = SingP1SixPStatic2
-X = 410
+X = 450
 Color = P4Dark
 
 [SingP4SixPTextScore]
 Inheritance = SingP1SixPTextScore
-X = 428
+X = 460
 
 [SingP4SixPSingBar]
 Inheritance = SingP1SixPSingBar
-X = 410
+X = 450
 
 #Player Five
 [SingP5SixPStatic]
 Inheritance = SingP4SixPStatic
-Y = 225
+X = 540
 Color = P5Dark
 
 ; [SingP5SixPText]
@@ -4651,26 +4640,26 @@ Color = P5Dark
 ; Y = 227
 
 [SingP5SixPAvatar]
-Inheritance = SingP4SixPAvatar
-Y = 230
+Inheritance = SingP1SixPAvatar
+X = 544
 
 [SingP5SixPStatic2]
 Inheritance = SingP1SixPStatic2
-X = 540
+X = 580
 Color = P5Dark
 
 [SingP5SixPTextScore]
 Inheritance = SingP1SixPTextScore
-X = 558
+X = 590
 
 [SingP5SixPSingBar]
 Inheritance = SingP1SixPSingBar
-X = 540
+X = 580
 
 #Player Six
 [SingP6SixPStatic]
 Inheritance = SingP4SixPStatic
-Y = 350
+X = 670
 Color = P6Dark
 
 ; [SingP6SixPText]
@@ -4678,21 +4667,21 @@ Color = P6Dark
 ; Y = 352
 
 [SingP6SixPAvatar]
-Inheritance = SingP4SixPAvatar
-Y = 355
+Inheritance = SingP1SixPAvatar
+X = 675
 
 [SingP6SixPStatic2]
 Inheritance = SingP1SixPStatic2
-X = 670
+X = 710
 Color = P6Dark
 
 [SingP6SixPTextScore]
 Inheritance = SingP1SixPTextScore
-X = 688
+X = 720
 
 [SingP6SixPSingBar]
 Inheritance = SingP1SixPSingBar
-X = 670
+X = 710
 
 ##################################
 ##########     Duet     ##########
@@ -5133,7 +5122,7 @@ Y = 285
 [SingP1ThreePOscilloscope]
 Inheritance = SingP1Oscilloscope
 X = 15
-Y = 15
+Y = 5
 W = 160
 
 [SingP2MOscilloscope]
@@ -5164,7 +5153,7 @@ Y = 360
 [SingP1FourPOscilloscope]
 Inheritance = SingP1Oscilloscope
 X = 22
-Y = 25
+Y = 5
 W = 157
 
 [SingP2FourPOscilloscope]
@@ -5182,28 +5171,28 @@ X = 622
 # SIX  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 [SingP1SixPOscilloscope]
 Inheritance = SingP1Oscilloscope
-X = 20
-Y = 8
+X = 30
+Y = 5
 
 [SingP2SixPOscilloscope]
 Inheritance = SingP1SixPOscilloscope
-X = 150
+X = 160
 
 [SingP3SixPOscilloscope]
 Inheritance = SingP1SixPOscilloscope
-X = 280
+X = 290
 
 [SingP4SixPOscilloscope]
 Inheritance = SingP1SixPOscilloscope
-X = 410
+X = 420
 
 [SingP5SixPOscilloscope]
 Inheritance = SingP1SixPOscilloscope
-X = 540
+X = 550
 
 [SingP6SixPOscilloscope]
 Inheritance = SingP1SixPOscilloscope
-X = 670
+X = 680
 
 # FOUR DUET P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 [SingP1DuetFourPOscilloscope]
