Added some texture types

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1166,6 +1166,7 @@ Tex = SongBG
 
 #Dummy static
 [SongRouletteStaticNonParty1]
+Type = Transparent
 
 #title screen: Song selection
 [SongRouletteTextNonParty1]
@@ -1216,6 +1217,7 @@ X = 270
 Y = 80
 H = 200
 W = 237
+Type = Transparent
 
 [SongRouletteEqualizer]
 Inheritance = SongEqualizer
@@ -6176,6 +6178,7 @@ X = 315
 Y = 160
 H = 55
 W = 55
+Type = Transparent
 
 [ScoreFourPTextScore1]
 Inheritance = ScoreTextScore1
@@ -6306,6 +6309,7 @@ Y = 115
 W = 36
 H = 49
 Z = 1
+Type = Transparent
 
 [ScoreFourPPlayer1Static7]
 Inheritance = ScorePlayer1Static5
@@ -6732,6 +6736,7 @@ Y = 115
 W = 36
 H = 49
 Z = 1
+Type = Transparent
 
 [ScoreSixPPlayer1Static5]
 Inheritance = ScorePlayer1Static5
