Fixed search box

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -794,18 +794,18 @@ ColB=0
 Alpha=0.5
 
 [SongJumptoStatic1]
-X = 270
+X = 240
 Y = 555
 W = 320
 H = 30
+Z = 0.97
 Color = ColorDark
 DColor = White
 Tex = icon_song_search
 Type = Colorized
-Z = 0.97
 
 [SongJumptoText1]
-X = 435
+X = 405
 Y = 562
 Z = 0.97
 Color = White
@@ -813,45 +813,13 @@ Size = 16
 Align = 1
 Text = SONG_SEARCH_DESC
 
-[SongJumptoSelectSlideType]
-X = 455
-Y = -40
-Z = 0.97
-H = 16
-SBGW = 240
-SkipX = 0
-Size = 1
-oneItemOnly = 1
-showArrows = 1
-Type = Transparent
-#text
-TColor = White
-TDColor = White
-#Select0r.Text.Color
-STColor = White
-STDColor = White
-
-[SongJumptoButtonSearchText]
-X = 280
-Y = 535
-Z = 0.97
-W = 290
-H = 10
-Size = 8
-Font = 1
-Align = 0
+[SongJumptoText2]
+X = 400
+Y = 560
 Color = White
-Type = Transparent
-
-#[SongJumptoTextFound]
-#X = 270
-#Y = 125
-#Color = White
-#Font = 0
-#Size = 20
-#Text = SONG_JUMPTO_HELP
-#Align = 0
-#Z = 0.97
+Font = 1
+Size = 20
+Align = 1
 
 #####################
 ###  screen song  ###
