Fixed show scores and look roullete type song info

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -982,16 +982,16 @@ Tex = icon_song_rap
 
 [SongCreatorIcon]
 Inheritance = SongIcon
-X = 210
-Y = 505
+X = 280
+Y = 510
 W = 12
 H = 16
 Tex = icon_song_createdby
 
 [SongFixerIcon]
 Inheritance = SongIcon
-X = 400
-Y = 506
+X = 280
+Y = 530
 W = 11
 H = 14
 Tex = icon_song_fixedby
@@ -1005,7 +1005,7 @@ H = 14
 Tex = icon_song_unvalidated
 
 [SongTextMyScores]
-X = 300
+X = 335
 Y = 430
 Color = White
 Font = 0
@@ -1014,17 +1014,13 @@ Align = 1
 Text = SING_SONGS_MYSCORES
 
 [SongTextWebsite]
-X = 470
-Y = 430
-Color = White
-Font = 0
-Size = 14
-Align = 1
+Inheritance = SongTextMyScores
+X = 445
 
 #Local scores
 
 [SongTextLocalScore1]
-X = 290
+X = 325
 Y = 450
 Color = White
 Font = 0
@@ -1032,23 +1028,15 @@ Size = 12
 Align = 2
 
 [SongTextLocalScore2]
-X = 290
+Inheritance = SongTextLocalScore1
 Y = 470
-Color = White
-Font = 0
-Size = 12
-Align = 2
 
 [SongTextLocalScore3]
-X = 290
+Inheritance = SongTextLocalScore1
 Y = 490
-Color = White
-Font = 0
-Size = 12
-Align = 2
 
 [SongTextUserLocalScore1]
-X = 300
+X = 335
 Y = 450
 Color = White
 Font = 0
@@ -1056,25 +1044,17 @@ Size = 12
 Align = 0
 
 [SongTextUserLocalScore2]
-X = 300
+Inheritance = SongTextUserLocalScore1
 Y = 470
-Color = White
-Font = 0
-Size = 12
-Align = 0
 
 [SongTextUserLocalScore3]
-X = 300
+Inheritance = SongTextUserLocalScore1
 Y = 490
-Color = White
-Font = 0
-Size = 12
-Align = 0
 
 #Online Score
 
 [SongTextOnlineScore1]
-X = 460
+X = 435
 Y = 450
 Color = White
 Font = 0
@@ -1082,23 +1062,15 @@ Size = 12
 Align = 2
 
 [SongTextOnlineScore2]
-X = 460
+Inheritance = SongTextOnlineScore1
 Y = 470
-Color = White
-Font = 0
-Size = 12
-Align = 2
 
 [SongTextOnlineScore3]
-X = 460
+Inheritance = SongTextOnlineScore1
 Y = 490
-Color = White
-Font = 0
-Size = 12
-Align = 2
 
 [SongTextUserOnlineScore1]
-X = 470
+X = 445
 Y = 450
 Color = White
 Font = 0
@@ -1106,20 +1078,12 @@ Size = 12
 Align = 0
 
 [SongTextUserOnlineScore2]
-X = 470
+Inheritance = SongTextUserOnlineScore1
 Y = 470
-Color = White
-Font = 0
-Size = 12
-Align = 0
 
 [SongTextUserOnlineScore3]
-X = 470
+Inheritance = SongTextUserOnlineScore1
 Y = 490
-Color = White
-Font = 0
-Size = 12
-Align = 0
 
 ########################################################################################
 ##### 																			   #####
@@ -1148,12 +1112,12 @@ Align = 0
 
 #song info background
 [SongRouletteStatic1]
-X = 195
+X = 270
 Y = 280
-W = 395
+W = 237
 H = 270
 Z = 0.95
-Alpha = 0.75
+Alpha = 0.5
 Color = ColorLight
 Tex = SongSelection2
 Type = Colorized
@@ -1218,23 +1182,20 @@ Inheritance = SongUnvalidatedIcon
 [SongRouletteTextArtist]
 X = 390
 Y = 290
-W = 370
+W = 237
 Color = White
 Font = 1
 Size = 20
 Align = 1
 
 [SongRouletteTextTitle]
-X = 390
+Inheritance = SongRouletteTextArtist
 Y = 340
-W = 370
-Color = White
 Font = 0
 Size = 18
-Align = 1
 
 [SongRouletteTextNumber]
-X = 580
+X = 500
 Y = 530
 Z = 0.95
 Color = White
@@ -1250,20 +1211,14 @@ Size = 16
 Align = 1
 
 [SongRouletteTextCreator]
-X = 230
-Y = 508
-Color = White
-Font = 0
-Size = 12
+Inheritance = SongRouletteTextNumber
+X = 297
+Y = 510
 Align = 0
 
 [SongRouletteTextFixer]
-X = 420
-Y = 508
-Color = White
-Font = 0
-Size = 12
-Align = 0
+Inheritance = SongRouletteTextCreator
+Y = 530
 
 [SongRouletteTextMyScores]
 Inheritance = SongTextMyScores
@@ -1628,7 +1583,7 @@ X = 40
 Y = 390
 
 [SongChessboardCalculatedMedleyIcon]
-Inheritance = SongMedleyIcon
+Inheritance = SongChessboardMedleyIcon
 
 [SongChessboardVideoIcon]
 Inheritance = SongVideoIcon
