--- a/game/themes/common/Waves.ini
+++ b/game/themes/common/Waves.ini
@@ -9,15 +9,19 @@
 #  under Creative Common license  #
 ###################################
 
+#Video credits to: AA VFX https://www.youtube.com/watch?v=53pUo71jr8w
+
+###############
 [Skin]
-Theme=Neon
-Name= Static Violet
-Color=Violet
+Theme=Argon
+Name= Waves
+Color=Pink
 
 [Textures]
 /**
  * Interface
  */
+interface_selectbg_search   = [interface]selectbg_search.png
 interface_dialog_background = [interface]dialog_background.png
 interface_dialog_background2 = [interface]dialog_background2.png
 interface_dialog_backgroundtop = [interface]dialog_backgroundtop.png
@@ -28,14 +32,16 @@ Cursor_Pressed = [interface]cursor_pressed.png
 /**
  * Icons
  */
-icon_song_search      = [icon]song_search.png
-icon_song_video       = [icon]song_video.png
-icon_song_medley      = [icon]song_medley.png
-icon_song_duet        = [icon]song_duet.png
-icon_song_rap         = [icon]song_rap.png
-icon_song_createdby   = [icon]song_createdby.png
-icon_song_fixedby     = [icon]song_fixedby.png
-icon_song_unvalidated = [icon]song_unvalidated.png
+icon_song_menu   = [icon]song_menu.png
+icon_song_search = [icon]song_search.png
+icon_song_video  = [icon]song_video.png
+icon_song_medley = [icon]song_medley.png
+icon_song_calcmedley = [icon]song_calcmedley.png
+icon_song_duet 	 = [icon]song_duet.png
+icon_song_rap 	 = [icon]song_rap.png
+
+loadicon = [load]logo.png
+loadbaricon = [load]bar.png
 
 # # # M A I N # # #
 ButtonSolo     = [main]buttonsolo.png
@@ -56,13 +62,13 @@ Select_ArrowRight = [interface]select_arrow_right.png
 
 #Backgrounds
 LoadingBG      = [bg-load]basic.jpg
-TitleBG	       = [bg-main]violet.jpg
-MainBG         = [bg-main]violet.jpg
-SongBG         = [bg-main]violet.jpg
-ScoreScreenBG  = [bg-main]violet.jpg
-Top5BG         = [bg-main]violet.jpg
-OptionsBG      = [bg-main]violet.jpg
-PartyBG        = [bg-main]violet.jpg
+TitleBG	       = [bg-main]lines.webm
+MainBG         = [bg-main]lines.webm
+SongBG         = [bg-main]lines.webm
+ScoreScreenBG  = [bg-main]lines.webm
+Top5BG         = [bg-main]lines.webm
+OptionsBG      = [bg-main]lines.webm
+PartyBG        = [bg-main]lines.webm
 
 # # # S O N G S E L E C E T # # #
 SongSelection1up = [main]songSelection1up.png
@@ -77,8 +83,6 @@ SongMessage    = [song]message.png
 SongDuetSinger = [song]duetsinger.png
 SongDuetSinger2 = [song]duetsinger2.png
 SongDuetSinger3 = [song]duetsinger3.png
-
-Menubg = [menu]bg.png
 
 # # # S I N G # # #
 #the bar where the lyrics reside
@@ -160,10 +164,13 @@ Optionsbuttonmicrophones = [Options]buttonmicrophones.png
 Optionsbuttonadvanced    = [Options]buttonadvanced.png
 Optionsbuttonnetwork     = [Options]buttonnetwork.png
 Optionsbuttonwebcam      = [Options]buttonwebcam.png
-Optionsbuttonprofiles    = [Options]buttonprofiles.png
+Optionsbuttonjukebox     = [Options]buttonjukebox.png
 Optionsbuttonback        = [Options]buttonback.png
 
 # # # M A I N   P A R T Y # # #
+ClassicButton     =[MainParty]ClassicButton.png
+ClassicFreeButton =[MainParty]ClassicFreeButton.png
+ChallengeButton   =[MainParty]ChallengeButton.png
 TournamentButton  =[tournament]trophy.png
 
 # # # P A R T Y # # #
@@ -210,6 +217,8 @@ ButtonDel   = [button]del.png
 
 SongMenuBG  = [menu]songMenuBg.png
 SongMenuSelectBG  = [menu]songMenuSelectBg.png
+PopUpBG     = [menu]popUpBG.png
+
 
 # # # N O T E S # # #
 # sung notes - colorized with playercolors
@@ -242,7 +251,7 @@ NotePerfectStar = [effect]perfectNoteStar.png
 
 
 # # # dirty helpers # # #
-Rectangle  = [button]rectangle.png
+Rectangle  = [helper]rectangle.png
 ButtonFade = [helper]buttonFade.png
 BGFade     = [special]bg_fade.png
 
@@ -286,7 +295,7 @@ WhiteFade = [color]white-fade.png
 BlackFade = [color]black-fade.png
 Pointer = [color]pointer.png
 
-# # # P L A Y E R   S E L E C T I O N # # #
+# # # N A M E # # #
 AvatarFrame = [name]frame.png
 CurrentPlayer = [name]player.png
 SelectFrame = [name]select.png
@@ -307,7 +316,3 @@ AboutBG = [About]helperbg2.png
 
 # # # D E V E L O P E R S # # #
 Dhelperbg = [Developers]helperbg.png
-
-# # # C O M M O N # # #
-BlackBG = [common]blackbg.png
-
