--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -783,47 +783,37 @@ Size = 12
 Align = 0
 Text = C_FIXEDBY
 
+#####################
+###  screen song  ###
+#####################
 
-[SongJumpto]
-
-[SongJumptoBackground]
-Type=Fade
-ColR=0
-ColG=0
-ColB=0
-Alpha=0.5
-
-[SongJumptoStatic1]
+[SongSearchIcon]
 X = 240
 Y = 555
 W = 320
 H = 30
-Z = 0.97
+Alpha = 0.5
 Color = ColorDark
 DColor = White
 Tex = icon_song_search
 Type = Colorized
 
-[SongJumptoText1]
+[SongSearchTextPlaceholder]
 X = 405
 Y = 562
-Z = 0.97
-Color = White
+Color = GrayLight
 Size = 16
 Align = 1
 Text = SONG_SEARCH_DESC
 
-[SongJumptoText2]
-X = 400
-Y = 560
+[SongSearchText]
+X = 265
+Y = 559
 Color = White
 Font = 0
 Size = 20
-Align = 1
-
-#####################
-###  screen song  ###
-#####################
+Align = 0
+Writable = 1
 
 [SongTextNoSongs]
 X = 400
@@ -1178,6 +1168,15 @@ Inheritance = SongFixerIcon
 
 [SongRouletteUnvalidatedIcon]
 Inheritance = SongUnvalidatedIcon
+
+[SongRouletteSearchIcon]
+Inheritance = SongSearchIcon
+
+[SongRouletteSearchTextPlaceholder]
+Inheritance = SongSearchTextPlaceholder
+
+[SongRouletteSearchText]
+Inheritance = SongSearchText
 
 [SongRouletteTextArtist]
 X = 390
@@ -1612,6 +1611,18 @@ Y = 450
 
 [SongChessboardUnvalidatedIcon]
 Inheritance = SongUnvalidatedIcon
+
+[SongChessboardSearchIcon]
+Inheritance = SongSearchIcon
+X = 342
+
+[SongChessboardSearchTextPlaceholder]
+Inheritance = SongSearchTextPlaceholder
+X = 507
+
+[SongChessboardSearchText]
+Inheritance = SongSearchText
+X = 367
 
 [SongChessboardTextArtist]
 Inheritance = SongRouletteTextArtist
@@ -2057,6 +2068,15 @@ Inheritance = SongFixerIcon
 [SongCarouselUnvalidatedIcon]
 Inheritance = SongUnvalidatedIcon
 
+[SongCarouselSearchIcon]
+Inheritance = SongSearchIcon
+
+[SongCarouselSearchTextPlaceholder]
+Inheritance = SongSearchTextPlaceholder
+
+[SongCarouselSearchText]
+Inheritance = SongSearchText
+
 [SongCarouselStatic1]
 Inheritance = SongRouletteStatic1
 
@@ -2395,6 +2415,17 @@ Y = 225
 [SongSlotMachineUnvalidatedIcon]
 Inheritance = SongUnvalidatedIcon
 
+[SongSlotMachineSearchIcon]
+Inheritance = SongSearchIcon
+X = 340
+
+[SongSlotMachineSearchTextPlaceholder]
+Inheritance = SongSearchTextPlaceholder
+X = 505
+
+[SongSlotMachineSearchText]
+Inheritance = SongSearchText
+X = 365
 
 [SongSlotMachineTextArtist]
 Inheritance = SongRouletteTextArtist
@@ -2765,6 +2796,15 @@ Inheritance = SongCreatorIcon
 
 [SongSlideFixerIcon]
 Inheritance = SongFixerIcon
+
+[SongSlideSearchIcon]
+Inheritance = SongSearchIcon
+
+[SongSlideSearchTextPlaceholder]
+Inheritance = SongSearchTextPlaceholder
+
+[SongSlideSearchText]
+Inheritance = SongSearchText
 
 [SongSlideUnvalidatedIcon]
 Inheritance = SongUnvalidatedIcon
@@ -3171,6 +3211,18 @@ Y = 555
 [SongListUnvalidatedIcon]
 Inheritance = SongUnvalidatedIcon
 
+[SongListSearchIcon]
+Inheritance = SongSearchIcon
+X = 125
+
+[SongListSearchTextPlaceholder]
+Inheritance = SongSearchTextPlaceholder
+X = 295
+
+[SongListSearchText]
+Inheritance = SongSearchText
+X = 150
+
 [SongListTextArtist]
 Inheritance = SongRouletteTextArtist
 X = 100
@@ -3568,10 +3620,8 @@ Inheritance = SongRouletteTextNonParty1
 [SongMosaicCover]
 X = 105
 Y = 70
-W = 100
-H = 125
-ZoomThumbW = 125
-ZoomThumbH = 140
+W = 85
+H = 115
 Rows = 4
 Cols = 1
 Padding = 4
@@ -3581,7 +3631,7 @@ Reflections = 0
 X = 220
 Y = 70
 W = 355
-H = 254
+H = 234
 Type = Transparent
 
 [SongMosaicEqualizer]
@@ -3597,46 +3647,55 @@ Bands = 18
 [SongMosaicMedleyIcon]
 Inheritance = SongMedleyIcon
 X = 545
-Y = 412
+Y = 392
 
 [SongMosaicCalculatedMedleyIcon]
 Inheritance = SongCalculatedMedleyIcon
 X = 545
-Y = 412
+Y = 392
 
 [SongMosaicVideoIcon]
 Inheritance = SongVideoIcon
 X = 545
-Y = 380
+Y = 360
 
 [SongMosaicDuetIcon]
 Inheritance = SongDuetIcon
 X = 545
-Y = 408
+Y = 388
 
 [SongMosaicRapIcon]
 Inheritance = SongRapIcon
 X = 545
-Y = 530
+Y = 510
 
 [SongMosaicCreatorIcon]
 Inheritance = SongCreatorIcon
 X = 230
-Y = 530
+Y = 512
 
 [SongMosaicFixerIcon]
 Inheritance = SongFixerIcon
 X = 415
-Y = 450
+Y = 512
 
 [SongMosaicUnvalidatedIcon]
 Inheritance = SongUnvalidatedIcon
 
+[SongMosaicSearchIcon]
+Inheritance = SongSearchIcon
+
+[SongMosaicSearchTextPlaceholder]
+Inheritance = SongSearchTextPlaceholder
+
+[SongMosaicSearchText]
+Inheritance = SongSearchText
+
 [SongMosaicStatic1]
 X = 220
-Y = 328
+Y = 308
 W = 355
-H = 254
+H = 234
 Z = 0.9
 Color = ColorLight
 Tex = JukeboxSongSelection
@@ -3647,180 +3706,180 @@ ReflectionSpacing = 2
 [SongMosaicTextArtist]
 Inheritance = SongRouletteTextArtist
 X = 230
-Y = 340
+Y = 320
 W = 300
 Align = 0
 
 [SongMosaicTextTitle]
 Inheritance = SongRouletteTextTitle
 X = 230
-Y = 390
+Y = 370
 W = 300
 Align = 0
 
 [SongMosaicTextNumber]
 Inheritance = SongRouletteTextNumber
 X = 565
-Y = 555
+Y = 525
 
 [SongMosaicTextYear]
 Inheritance = SongRouletteTextYear
 X = 565
-Y = 343
+Y = 323
 Align = 2
 
 [SongMosaicTextCreator]
 Inheritance = SongRouletteTextCreator
 X = 250
-Y = 532
+Y = 512
 
 [SongMosaicTextFixer]
 Inheritance = SongRouletteTextFixer
 X = 435
-Y = 532
+Y = 512
 
 [SongMosaicTextMyScores]
 Inheritance = SongTextMyScores
-Y = 440
+Y = 420
 
 [SongMosaicTextWebsite]
 Inheritance = SongTextWebsite
 X = 460
-Y = 440
+Y = 420
 
 #Local scores:
 
 [SongMosaicTextLocalScore1]
 Inheritance = SongTextLocalScore1
-Y = 470
+Y = 450
 
 [SongMosaicTextLocalScore2]
 Inheritance = SongTextLocalScore2
-Y = 490
+Y = 470
 
 [SongMosaicTextLocalScore3]
 Inheritance = SongTextLocalScore3
-Y = 510
+Y = 490
 
 [SongMosaicTextUserLocalScore1]
 Inheritance = SongTextUserLocalScore1
-Y = 470
+Y = 450
 
 [SongMosaicTextUserLocalScore2]
 Inheritance = SongTextUserLocalScore2
-Y = 490
+Y = 470
 
 [SongMosaicTextUserLocalScore3]
 Inheritance = SongTextUserLocalScore3
-Y = 510
+Y = 490
 
 #Online Scores:
 
 [SongMosaicTextOnlineScore1]
 Inheritance = SongTextOnlineScore1
 X = 450
-Y = 470
+Y = 450
 
 [SongMosaicTextOnlineScore2]
 Inheritance = SongTextOnlineScore2
 X = 450
-Y = 490
+Y = 470
 
 [SongMosaicTextOnlineScore3]
 Inheritance = SongTextOnlineScore3
 X = 450
-Y = 510
+Y = 490
 
 [SongMosaicTextUserOnlineScore1]
 Inheritance = SongTextUserOnlineScore1
 X = 460
-Y = 470
+Y = 450
 
 [SongMosaicTextUserOnlineScore2]
 Inheritance = SongTextUserOnlineScore2
 X = 460
-Y = 490
+Y = 470
 
 [SongMosaicTextUserOnlineScore3]
 Inheritance = SongTextUserOnlineScore3
 X = 460
-Y = 510
+Y = 490
 
 #Duet singers
 [SongMosaicStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
 X = 615
-Y = 440
+Y = 420
 
 [SongMosaicStatic2PlayersDuetSingerP2]
 Inheritance = SongStatic2PlayersDuetSingerP2
 X = 615
-Y = 465
+Y = 445
 
 [SongMosaicStatic3PlayersDuetSingerP1]
 Inheritance = SongStatic3PlayersDuetSingerP1
 X = 615
-Y = 430
+Y = 410
 
 [SongMosaicStatic3PlayersDuetSingerP2]
 Inheritance = SongStatic3PlayersDuetSingerP2
 X = 615
-Y = 455
+Y = 435
 
 [SongMosaicStatic3PlayersDuetSingerP3]
 Inheritance = SongStatic3PlayersDuetSingerP3
 X = 615
-Y = 480
+Y = 460
 
 [SongMosaicStatic4PlayersDuetSingerP3]
 Inheritance = SongStatic4PlayersDuetSingerP3
 X = 625
-Y = 440
+Y = 420
 
 [SongMosaicStatic4PlayersDuetSingerP4]
 Inheritance = SongStatic4PlayersDuetSingerP4
 X = 625
-Y = 465
+Y = 445
 
 [SongMosaicStatic6PlayersDuetSingerP4]
 Inheritance = SongStatic6PlayersDuetSingerP4
 X = 625
-Y = 430
+Y = 410
 
 [SongMosaicStatic6PlayersDuetSingerP5]
 Inheritance = SongStatic6PlayersDuetSingerP5
 X = 625
-Y = 455
+Y = 435
 
 [SongMosaicStatic6PlayersDuetSingerP6]
 Inheritance = SongStatic6PlayersDuetSingerP6
 X = 625
-Y = 480
+Y = 460
 
 [SongMosaicText2PlayersDuetSingerP1]
 Inheritance = SongText2PlayersDuetSingerP1
 X = 692
-Y = 445
+Y = 425
 
 [SongMosaicText2PlayersDuetSingerP2]
 Inheritance = SongText2PlayersDuetSingerP2
 X = 692
-Y = 470
+Y = 450
 
 [SongMosaicText3PlayersDuetSingerP1]
 Inheritance = SongText3PlayersDuetSingerP1
 X = 692
-Y = 435
+Y = 415
 
 [SongMosaicText3PlayersDuetSingerP2]
 Inheritance = SongText3PlayersDuetSingerP2
 X = 692
-Y = 460
+Y = 440
 
 [SongMosaicText3PlayersDuetSingerP3]
 Inheritance = SongText3PlayersDuetSingerP3
 X = 692
-Y = 485
+Y = 465
 
 #and these are the ones for partymode
 [SongMosaicStaticParty1]
