Added hover effect on chessboard arrows

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1533,17 +1533,10 @@ ReflectionSpacing = 2
 
 
 [SongChessboardStatic3]
-X = 748
+Inheritance = SongChessboardStatic2
 Y = 350
-W = 30
-H = 41
 Z = 0.951
 Tex = SongSelection1dn
-Color = ColorDark
-DColor = GrayLight
-Type = Colorized
-Reflection = 0
-ReflectionSpacing = 2
 
 [SongChessboardCover]
 #Central covers Panel
