Moved developers and website url out from translations

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -13017,7 +13017,7 @@ Color = White
 Font = 0
 Size = 24
 Align = 0
-Text =
+Text = ABOUT_OVERVIEW
 
 [AboutMainText1]
 X = 70
@@ -13076,7 +13076,7 @@ DColor=
 Font = 0
 Size = 24
 Align = 0
-Text =
+Text = DEVELOPERS_OVERVIEW
 
 [DevelopersStatic1]
 X = 45
