Inverted arrows mouse hover on chessboard mode

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1502,13 +1502,13 @@ Y = 220
 W = 30
 H = 41
 Z = 0.4
+Alpha = 0.6
 Tex = SongSelection1up
 Color = ColorDark
 DColor = GrayLight
 Type = Colorized
 Reflection = 0
 ReflectionSpacing = 2
-
 
 [SongChessboardStatic3]
 Inheritance = SongChessboardStatic2
