--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1085,7 +1085,6 @@ Y = 280
 W = 237
 H = 270
 Z = 0.95
-Alpha = 0.55
 Color = ColorLight
 Tex = SongSelection2
 Type = Colorized
@@ -1482,6 +1481,7 @@ Y = 70
 W = 205
 H = 530
 Z = 0.10
+alpha = 0.55
 
 [SongChessboardStatic2]
 X = 748
@@ -1529,7 +1529,7 @@ Type = Transparent
 [SongChessboardEqualizer]
 Inheritance = SongEqualizer
 X = 745
-Y = 530
+Y = 537
 Bands = 8
 Length = 24
 
@@ -11885,13 +11885,15 @@ Text = C_WEBCAM
 
 [OptionsButtonProfiles]
 Inheritance = OptionsButton
-X = 260
+X = 270
 Y = 425
+W = 57
+H = 75
 Tex = Optionsbuttonprofiles
 
 [OptionsButtonProfilesText1]
 Inheritance = OptionsButtonGameText
-X = 35
+X = 30
 Y = 80
 Text = C_PROFILES
 
