Fixed jokers visibility and position

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -479,7 +479,7 @@ X = 40
 
 [SongStaticTeamJoker]
 Tex = Joker
-X = 505
+X = 540
 Y = 400
 W = 35
 H = 40
@@ -1903,10 +1903,11 @@ Text = PARTY_MODE
 # Jokers, 5 for each team, only shown in party Mode
 [SongChessboardStaticTeamJoker]
 Inheritance = SongStaticTeamJoker
-X = 565
-Y = 489
-W = 25
-H = 28
+X = 10
+Y = 485
+W = 30
+H = 35
+PaddingX = 9
 
 [SongChessboardTextPartyTime]
 X = 750
@@ -2600,6 +2601,8 @@ Text = PARTY_MODE
 # Jokers, 5 for each team, only shown in party Mode
 [SongSlotMachineStaticTeamJoker]
 Inheritance = SongStaticTeamJoker
+X = 380
+Y = 425
 
 [SongSlotMachineTextPartyTime]
 X = 750
@@ -3460,8 +3463,9 @@ Text = PARTY_SONG_WHEREAMI
 # Jokers, 5 for each team, only shown in party Mode
 [SongListStaticTeamJoker]
 Inheritance = SongStaticTeamJoker
-X = 550
-Y = 175
+X = 570
+Y = 280
+PaddingX = 10
 
 [SongListTextPartyTime]
 X = 750
@@ -3930,8 +3934,9 @@ Text = PARTY_SONG_WHEREAMI
 # Jokers, 5 for each team, only shown in party Mode
 [SongMosaicStaticTeamJoker]
 Inheritance = SongStaticTeamJoker
-X = 555
-Y = 370
+X = 590
+Y = 450
+PaddingX = 5
 
 [SongMosaicTextPartyTime]
 X = 750
